--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,43 @@
 <script>
     // timeline data
     const timelineEvents = [
+    { title: 'TBD', 
+      date: new Date('2025-11-11'), 
+      venue: 'Stockholm Commutative Algebra Seminar',
+      location: 'Zoom',
+      city: 'Virtual',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'TBD' } },
+    { title: 'The stable Tamari lattice', 
+      date: new Date('2025-11-6'), 
+      venue: 'AMS Fall Central Sectional Meeting',
+      location: 'Iowa State University',
+      city: 'Ames, IA',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'The stable Tamari lattice was introduced by Haiman through the lens of invariant polynomials, extended by Bergeron-Preville-Ratelle, and is a variation of the Tamari lattice. '
+                          + 'Stemming from the AMS MRC: Algebraic Combinatorics this past summer, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. '
+                          + 'Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems (related to Catalan numbers and parking functions) we are tackling. '
+                          + 'I will discuss this data through some examples and Python code.' } },
+    { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-10-31'), 
+      venue: 'Algebra and Geometry Seminar',
+      location: 'Iowa State University',
+      city: 'Ames, IA',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. '
+                          + 'This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring. '
+                          + 'If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. '
+                          + 'Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences. '
+                          + 'Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.' } },
     { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-10-19'), 
       venue: 'AMS Fall Central Sectional Meeting',
