--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -54,6 +54,16 @@
     <p>
       <ul>
         <li>
+          Macaulay2 Workshop
+          <span style="float:right">December 2025</span>
+        </li>
+        <br>
+        <li>
+          Arizona-New Mexico Symposium on Commutative Algebra and its Interaction: Geometric Combinatorics
+          <span style="float:right">December 2025</span>
+        </li>
+        <br>
+        <li>
           KUMUNU 2025
           <span style="float:right">October 2025</span>
         </li>
