--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -180,6 +180,18 @@
   <p>
     <ul>
       <li>
+        <q>TBD</q>, Stockholm Commutative Algebra Seminar
+        <span style="float:right">November 2025</span>
+        <br>
+        Abstract
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          TBD
+        </blockquote>
+        <br>
+      </li>
+      <br>
+      <li>
         <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Syzygies and Mirror Symmetry Seminar
         <span style="float:right">February 2025</span>
         <br>
@@ -293,14 +305,14 @@
             <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
             <blockquote class="abstract-content">
               The stable Tamari lattice was introduced by Haiman through the lens of invariant polynomials, extended by Bergeron-Preville-Ratelle, and is a variation of the Tamari lattice. 
-              Stemming from the AMS MRC: Algebraic Combinatorics this past summer, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. 
-              Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems we are tackling. 
+              Stemming from the AMS MRC: Algebraic Combinatorics in the summer of 2024, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. 
+              Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems (related to Catalan numbers and parking functions) we are tackling. 
               I will discuss this data through some examples and Python code.
             </blockquote>
           </li>
           <br>
           <li>
-            <q>Betti tables and Lefschetz properties</q>, Algebra and Geometry Seminar
+            <q>Betti tables forcing failure of the weak Lefschetz property</q>, Algebra and Geometry Seminar
             <span style="float:right">October 2025</span>
             <br>
             Abstract 
