Added Stockholm talk

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -180,13 +180,18 @@
   <p>
     <ul>
       <li>
-        <q>TBD</q>, Stockholm Commutative Algebra Seminar
+        <q>Betti tables forcing failure of the weak Lefschetz property</q>, Stockholm Commutative Algebra Seminar
         <span style="float:right">November 2025</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/stockholm/talk.pdf" target="_blank">Slides</a> | 
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
-          TBD
+          For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. 
+          This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring. 
+          If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. 
+          Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences. 
+          Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.
         </blockquote>
         <br>
       </li>
