--- a/talks/index.html
+++ b/talks/index.html
@@ -100,16 +100,20 @@
 <script>
     // timeline data
     const timelineEvents = [
-    { title: 'TBD', 
+    { title: 'Betti tables forcing failure of the weak Lefschetz property', 
       date: new Date('2025-11-11'), 
       venue: 'Stockholm Commutative Algebra Seminar',
       location: 'Zoom',
       city: 'Virtual',
       extras: { notes: '', 
                 code: '', 
-                slides: '', 
+                slides: '../misc/slides/stockholm/talk.pdf', 
                 video: '',
-                abstract: 'TBD' } },
+                abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. '
+                          + 'This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring. '
+                          + 'If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. '
+                          + 'Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences. '
+                          + 'Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.' } },
     { title: 'The stable Tamari lattice', 
       date: new Date('2025-11-6'), 
       venue: 'AMS Fall Central Sectional Meeting',
