--- a/cocktails/index.html
+++ b/cocktails/index.html
@@ -22,32 +22,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="../../images/cocktails/corn_n_oil.webp" alt="Corn 'n' Oil" style="width:100%">
-        <h3 style="text-align:left">Corn 'n' Oil</h3>
-        <p><i>blackstrap rum, falernum, lime</i></p>
+        <img src="../../images/cocktails/dark_n_stormy.webp" alt="Dark 'n Stormy" style="width:100%">
+        <h3 style="text-align:left">Dark 'n Stormy</h3>
+        <p><i>ginger beer, Gosling's Black Seal rum, lime*, Angostura bitters*</i></p>
         <br>
-        <p>Molasses-y and warm.</p>
+        <p>Crisp and spicy.</p>
       </div>
       <div class="w3-quarter">
-        <img src="../../images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
-        <h3 style="text-align:left">Hibiscus Margarita</h3>
-        <p><i>blanco tequila, Sorel, lime, agave syrup</i></p>
+        <img src="../../images/cocktails/pall_mall.png" alt="Pall Mall" style="width:100%">
+        <h3 style="text-align:left">Pall Mall</h3>
+        <p><i>applejack, rye whiskey, lemon, grenadine, Angostura bitters</i></p>
         <br>
-        <p>Floral and refreshing.</p>
+        <p>Tart and fruity.</p>
       </div>
       <div class="w3-quarter">
-        <img src="../../images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
-        <h3 style="text-align:left">Pink Lady</h3>
-        <p><i>gin, lime, applejack, lemon, grenadine, egg white*</i></p>
+        <img src="../../images/cocktails/love_and_murder.webp" alt="Love and Murder" style="width:100%">
+        <h3 style="text-align:left">Love and Murder</h3>
+        <p><i>Campari, Green Chartreuse, lime</i></p>
         <br>
-        <p>Silky and fruity.</p>
+        <p>Herbal with some bitterness.</p>
       </div>
       <div class="w3-quarter">
-        <img src="../../images/cocktails/toblerone.webp" alt="Toblerone" style="width:100%">
-        <h3 style="text-align:left">Toblerone</h3>
-        <p><i>Irish cream, hazelnut liqueur, coffee liqueur, heavy cream, honey</i></p>
+        <img src="../../images/cocktails/golden_cadillac.webp" alt="Golden Cadillac" style="width:100%">
+        <h3 style="text-align:left">Golden Cadillac</h3>
+        <p><i>Galliano, creme de cacao, heavy cream</i></p>
         <br>
-        <p>Rich and decadent.</p>
+        <p>Rich and sweet.</p>
       </div>
     </div>
     <br>
@@ -77,17 +77,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class=""w3-container">
     <h2>Wines and Others</h2>
     <div class="w3-row-padding w3-padding-16">
-      <!-- <div class="w3-quarter" id="sparkling wines">
-        <h3>Sparkling Wines</h3>
-        <ul>
-          <li>Martinelli's Sparkling Blush (non-alcoholic)</li>
-          <li>Martinelli's Sparkling Apple-Cranberry (non-alcoholic)</li>
-        </ul>
-      </div> -->
       <div class="w3-quarter" id="sherrys">
         <h3>Sherrys</h3>
         <ul>
-          <li>Hartley & Gibson's Fino</li>
           <li>Hartley & Gibson's Amontillado</li>
           <li>Hartley & Gibson's Manzanilla</li>
           <li>Lustau Oloroso</li>
